--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-  "@tailwindcss/postcss": "^4.0.0", // Versione più recente disponibile. Se non la trovi, usa la precedente stabile.
-  "tailwindcss": "^3.4.3",
-  "postcss": "^8.4.38",
-  "autoprefixer": "^10.4.19",
-  "vite": "^5.0.0", // Assicurati che il tuo Vite sia aggiornato
-  // ... altre tue dipendenze di sviluppo
-},
+    "@tailwindcss/postcss": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.3.1"
+  }
 }
